--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Your Title
-subtitle: This is hexo theme
-author: Your Name
+title: Beibei's Blog
+subtitle: 不积小流 无以成江海
+author: beibei3030630
 timezone:
 
 # Internationalization (i18n) Setting
@@ -39,20 +39,20 @@ permalink_defaults:
 # Custom Setting Start
 
 # Site settings
-SEOTitle: either thin | or die
+SEOTitle: 不积小流 无以成江海
 email: hexo-theme-livemylife@gmail.com
 description: "It's an IT blog..."
-keyword: "v-vincen,v-vincen,livemylife,IT  blog,Blog"
+keyword: "IT  blog,Blog"
 header-img: img/header_img/newhome_bg.jpg
 archives-img: img/header_img/archive_bg2.jpg
 
 
 # Favicon settings
-favicon: img/avatar/roguerabbit.jpg
+favicon: img/avatar/favicon.png
 
 
 # Signature Setup
-signature: true # show signature
+signature: false # show signature
 signature-img: img/signature/vincent-white.png
 
 
@@ -62,19 +62,19 @@ wave: true
 
 # SNS Settings
 # RSS: true
-github_username: V-Vincen
-twitter_username: V_Vincen_
-instagram_username: v_vincen_
+github_username: beibei3030630
+#twitter_username: V_Vincen_
+#instagram_username: v_vincen_
 # facebook_username:  yourAccount
 # linkedin_username:  yourAccount
 # zhihu_username: WVincen
-weibo_username: WVincen
+#weibo_username: WVincen
 
 
 # Sidebar Settings
 sidebar: true   # whether or not using Sidebar.
-sidebar-about-description: "Fat people have no future, either thin or die..."
-sidebar-avatar: img/avatar/fatpeople.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "希望这里有可以帮助到你的内容"
+sidebar-avatar: img/avatar/roguerabbit.jpg    # use absolute URL, seeing it's used in both `/` and `/about/`
 widgets:
 - visitor   # busuanzi: https://busuanzi.ibruce.info/
 - featured-tags
@@ -95,21 +95,21 @@ featured-tags: true   # whether or not using Feature-Tags
 featured-condition-size: 0    # A tag will be featured if the size of it is more than this condition value
 
 ## Friends
-friends: [
-    {
-        title: "V_Vincen",
-        href: "https://v-vincen.life/"
-    },{
-        title: "Bean Tech",
-        href: "http://beantech.org"
-    },{
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
-    },{
-        title: "Hexo",
-        href: "https://hexo.io/"
-    }
-]
+#friends: [
+#   {
+#      title: "V_Vincen",
+#       href: "https://v-vincen.life/"
+#   },{
+#       title: "Bean Tech",
+#        href: "http://beantech.org"
+#    },{
+#        title: "Hux Blog",
+#        href: "http://huangxuan.me"
+#    },{
+#        title: "Hexo",
+#        href: "https://hexo.io/"
+#    }
+#]
 
 
 # Comment Settings
@@ -199,7 +199,7 @@ relative_link: true
 future: true
 highlight:
   enable: true
-  line_number: true
+  line_number: false
   auto_detect: true
   tab_replace:
   wrap: true
@@ -207,7 +207,7 @@ highlight:
 prismjs:
   enable: false
   preprocess: true
-  line_number: true
+  line_number: false
   tab_replace: ''
 
 
@@ -313,32 +313,26 @@ viewer: true
 # ThemeColor config
 themecolor:
   enable: true
-  mode: dark # themecolor mode light or dark, default light
+  mode: light # themecolor mode light or dark, default light
 
 
 # Mouseclick config
 mouseclick:
   enable: true
   content:
-    - The first step is as good as half over...
-    - Laugh and grow fat...
-    - Man proposes God disposes...
-    - When all else is lost the future still remains...
-    - Wasting time is robbing oneself...
-    - Sharp tools make good work...
-    - Cease to struggle and you cease to live...
-    - A friend in need is a friend indeed...
-    - Faith can move mountains...
+    - 秋风
+    - 落叶
+    - 清晨
+    - 黄昏
+    - 四季
+    - 如常
   color:
-    - '#9933CC'
-    - '#339933'
-    - '#66CCCC'
-    - '#FF99CC'
-    - '#CCCCFF'
-    - '#6666CC'
-    - '#663399'
-    - '#66CC99'
-    - '#FF0033'
+    - '#32384E'
+    - '#333242'
+    - '#27222C'
+    - '#272731'
+    - '#2C2E3D'
+    - '#282531'
 
 
 # Ribbon config
